--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,46 @@
-.keyboard {
-  margin: 5% auto;
-  width: 1200px;
+body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+}
+
+.keyboard {
+  margin: 0 auto;
+  width: 80%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[14];
+      grid-template-columns: repeat(14, 1fr);
+  row-gap: 5px;
+  -webkit-column-gap: 5px;
+          column-gap: 5px;
 }
 
 .keyItem {
-  width: 20px;
+  height: 50px;
+  -webkit-box-shadow: 1px 1px 1px 1px black;
+          box-shadow: 1px 1px 1px 1px black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.keyItem:nth-child(even) {
+  background: rgba(56, 56, 56, 0.067);
+}
+
+.text {
+  margin: 50px auto;
+  width: 80%;
 }
 /*# sourceMappingURL=styles.css.map */
