--- a/styles.scss
+++ b/styles.scss
@@ -1,10 +1,31 @@
-.keyboard {
-    margin: 5% auto;
-    width: 1200px;
+body {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column-reverse;
+}
+
+.keyboard {
+    margin: 0 auto;
+    width: 80%;
+    display: grid;
+    grid-template-columns: repeat(14, 1fr);
+    row-gap: 5px;
+    column-gap: 5px;
+
 }
 
 .keyItem {
-    width: 20px;
+    height: 50px;
+    box-shadow: 1px 1px 1px 1px black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &:nth-child(even) {
+        background: rgba(56, 56, 56, 0.067);
+    }
+}
+
+.text {
+    margin: 50px auto;
+    width: 80%;
 }
