--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,8 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .keyItem:nth-child(even) {
@@ -42,5 +44,9 @@ body {
 .text {
   margin: 50px auto;
   width: 80%;
+}
+
+.active {
+  border: 3px solid yellowgreen;
 }
 /*# sourceMappingURL=styles.css.map */
