--- a/styles.scss
+++ b/styles.scss
@@ -19,6 +19,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    box-sizing: border-box;
 
     &:nth-child(even) {
         background: rgba(56, 56, 56, 0.067);
@@ -28,4 +29,8 @@ body {
 .text {
     margin: 50px auto;
     width: 80%;
+}
+
+.active {
+    border: 3px solid yellowgreen;
 }
