--- a/styles.scss
+++ b/styles.scss
@@ -35,3 +35,10 @@ body {
 .active {
     border: 3px solid yellowgreen;
 }
+
+.describtion {
+    margin: 0 auto;
+    text-align: center;
+    color: rgb(26, 26, 26);
+    font-size: 24px;
+}
