--- a/styles.scss
+++ b/styles.scss
@@ -7,7 +7,7 @@ body {
     margin: 0 auto;
     width: 80%;
     display: grid;
-    grid-template-columns: repeat(14, 1fr);
+    grid-template-columns: repeat(15, 1fr);
     row-gap: 5px;
     column-gap: 5px;
 
@@ -41,4 +41,24 @@ body {
     text-align: center;
     color: rgb(26, 26, 26);
     font-size: 24px;
+}
+
+.CapsLock {
+    grid-column: span 2;
+}
+
+.Backspace {
+    grid-column: span 2;
+}
+
+.Space {
+    grid-column: span 2;
+}
+
+.Shift {
+    grid-column: span 2;
+}
+
+.Enter {
+    grid-column: span 2;
 }
